feat: front ajust all

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -4,10 +4,12 @@
     <meta charset="utf-8"/>
     <title>Smart Energy ESG IoT</title>
     <meta name="viewport" content="width=device-width,initial-scale=1"/>
+    <meta name="color-scheme" content="dark light"/>
     <link rel="stylesheet" href="/assets/style.css"/>
     <script defer src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script defer src="/assets/ui.js"></script>
+    <!-- carrega IOT antes do UI -->
     <script defer src="/assets/iot.js"></script>
+    <script defer src="/assets/ui.js"></script>
 </head>
 <body>
 <header>
